[package]
name = "matugen"
version = "2.4.0"
authors = ["InioX"]
description = "A material you color generation tool with templates"
repository = "https://github.com/InioX/matugen"
categories = ["command-line-utilities"]
exclude = ["default.nix", "flake.nix", "shell.nix", "example/*"]
license = "GPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
# This is here because of #43
enquote = "1.1.0"

color-eyre = { version = "0.6.2", default-features = false }
pretty_env_logger = "0.5.0"
paris-log = { version = "1.0.2", features = ["icons"] }
log = "0.4.17"
prettytable-rs = "0.10.0"
update-informer = "1.1.0"
reqwest = { version = "0.11.23", default_features = false, features = [
  "blocking",
  "rustls-tls",
] }

owo-colors = "4.0.0"
colorsys = "0.6.7"

resolve-path = "0.1.0"
directories = "5.0"
proper_path_tools = "0.7.0"

ahash = "0.8.7"
indexmap = "2.2.2"

image = "0.24.7"
upon = "0.8.0"
clap = { version = "4.2.4", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.8"
material-colors = { version = "0.3.2", features = ["image"] }
regex = "1.10.5"
execute = "0.2.13"
