[package]
name = "ini-material-color-utilities-rs"
version = "0.5.0"
edition = "2021"
license-file = "./LICENSE"
description = "A rust port of Material Design color utilities"
repository = "https://github.com/alphaqu/material-color-utilities-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
rand = "0.8.5"
num = "0.4"
clap = { version = "4.2.4", features = ["derive"], optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"
