[package]
name = "matugen-parser"
version = "0.1.0"
edition = "2024"

[features]
filter-docs = []

[dependencies]
serde_json = { version = "1.0.107" }
indexmap = { version = "2.7.0", features = ["serde"] }
ariadne = { version = "0.5.1" }
chumsky = { version = "0.10.0" }
thiserror = "2.0.12"
serde = { version = "1.0.160", features = [
    "serde_derive",
    "std",
], default-features = false }
color-eyre = { version = "0.6.2", default-features = false }
csscolorparser = "0.7.2"
colorsys = { default-features = false, version = "0.6.7" }
